# SLAP

./: .gitignore  CMakeLists.txt  Cargo.toml  build.rs
cxx/: CMakeLists.txt
cxx/include/: slap.h
cxx/src/extractor/: CMakeLists.txt  extractor.cpp
cxx/src/simulator/: simulator.cpp
example/: bicg.mlir  cholesky.mlir  floyd_warshall.mlir  gemm-template.json  gemm-template.mlir  gemm.mlir  lu_decomp.mlir  mvt.mlir  stencil.mlir  tiled_matmul.mlir  trisolve.mlir
include/: slap.h  slpn.h
scripts/: generate_bicg.py  generate_cholesky.py  generate_convolution.py  generate_doitgen.py  generate_floyd_warshall.py  generate_heat_dist.py  generate_lu_decomp.py  generate_matmul.py  generate_mvt.py  generate_stencil.py  generate_tiled_matmul.py  generate_trisolve.py  gnerate_matmul.md
src/: CMakeLists.txt  affine.rs  dataset.rs  graph.rs  main.rs  simulator.rs
src/extractor/: CMakeLists.txt  extractor.cpp
src/simulator/: CMakeLists.txt  mod.rs  simulator.cpp
