[package]
name = "slap"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bumpalo = { version = "3.16.0", features = ["boxed", "collections"] }
clap = { version = "4.5.20", features = ["derive"] }
rustc-hash = "2.0.0"
serde_json = "1.0.128"

[build-dependencies]
cmake = "0.1.51"
