[package]
name = "slap"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
bumpalo = { version = "3.16.0", features = ["boxed", "collections"] }
burn-dataset = "0.15.0"
clap = { version = "4.5.20", features = ["derive"] }
rand = "0.8.5"
rayon = "1.10.0"
regex-automata = "0.4.9"
rustc-hash = "2.0.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.14.0"

[build-dependencies]
cmake = "0.1.51"
